force-app/main/default/objects/Option__c/Option__c.object-meta.xml
<CustomObject>
    <description>Option pour les lignes de devis Kube2</description>
    <label>Devis Ligne Option</label>
    <nameField>
        <displayFormat>OP-{0000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Devis Ligne Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>