force-app/main/default/objects/Option__c/fields/amendedOrderProduct__c.field-meta.xml
<CustomField>
    <fullName>amendedOrderProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>[#] Ligne commande sur avenant</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Options de lignes (Avenant)</relationshipLabel>
    <relationshipName>AmendmentOptions</relationshipName>
    <type>Lookup</type>
</CustomField>