force-app/main/default/objects/Option__c/fields/Categorie__c.field-meta.xml
<CustomField>
    <fullName>Categorie__c</fullName>
    <label>Catégorie</label>
    <length>255</length>
    <type>Text</type>
</CustomField>