force-app/main/default/objects/Option__c/fields/Codeoption__c.field-meta.xml
<CustomField>
    <fullName>Codeoption__c</fullName>
    <externalId>true</externalId>
    <label>Code option</label>
    <length>10</length>
    <type>Text</type>
</CustomField>