force-app/main/default/objects/Option__c/fields/codeOptionUnique__c.field-meta.xml
<CustomField>
    <fullName>codeOptionUnique__c</fullName>
    <description>Concaténation de l&apos;ID ligne de devis avec le code option pour éviter les doublons d&apos;option sur la même ligne de devis.</description>
    <label>Code option unique</label>
    <length>255</length>
    <type>Text</type>
</CustomField>