force-app/main/default/objects/Option__c/fields/Libelleoption__c.field-meta.xml
<CustomField>
    <fullName>Libelleoption__c</fullName>
    <description>07/11_DMV : Ce champ doit être = au référentiel option (par défaut) ou personnalisé (exple : option libre ou modif du référentiel dans le temps)</description>
    <label>Libellé option</label>
    <length>100</length>
    <type>Text</type>
</CustomField>