force-app/main/default/objects/Option__c/fields/ligneDevis__c.field-meta.xml
<CustomField>
    <fullName>ligneDevis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Champ reliant l&apos;option à la ligne de devis correspondante. 
Ancien champ Lignedevis_del__c renommé</description>
    <label>Ligne devis</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Devis Ligne Options (Ligne devis)</relationshipLabel>
    <relationshipName>Options</relationshipName>
    <type>Lookup</type>
</CustomField>