force-app/main/default/objects/Option__c/fields/Non_Configuree__c.field-meta.xml
<CustomField>
    <fullName>Non_Configuree__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non Configurée</label>
    <type>Checkbox</type>
</CustomField>