force-app/main/default/objects/Option__c/fields/Option__c.field-meta.xml
<CustomField>
    <fullName>Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Option</label>
    <referenceTo>ReferentielOptions__c</referenceTo>
    <relationshipName>Options</relationshipName>
    <type>Lookup</type>
</CustomField>