force-app/main/default/objects/Option__c/fields/Option_de_Version__c.field-meta.xml
<CustomField>
    <fullName>Option_de_Version__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Option de Version</label>
    <type>Checkbox</type>
</CustomField>