force-app/main/default/objects/Option__c/fields/optionDeletable__c.field-meta.xml
<CustomField>
    <fullName>optionDeletable__c</fullName>
    <formula>( ISPICKVAL(ligneDevis__r.Quote.Status, &quot;A configurer&quot;) || ISPICKVAL(ligneDevis__r.Quote.Status, &quot;Non transmis&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[#] Ligne option supprimable</label>
    <type>Checkbox</type>
</CustomField>