force-app/main/default/objects/Option__c/fields/Pack__c.field-meta.xml
<CustomField>
    <fullName>Pack__c</fullName>
    <label>Pack</label>
    <length>255</length>
    <type>Text</type>
</CustomField>