force-app/main/default/objects/Option__c/fields/Pourcentage__c.field-meta.xml
<CustomField>
    <fullName>Pourcentage__c</fullName>
    <label>Pourcentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>