force-app/main/default/objects/Option__c/fields/PrixHT__c.field-meta.xml
<CustomField>
    <fullName>PrixHT__c</fullName>
    <description>Alimenté par configurateur</description>
    <formula>PrixunitaireHT__c * Quantite__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prix HT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>