force-app/main/default/objects/Option__c/fields/PrixunitaireHT__c.field-meta.xml
<CustomField>
    <fullName>PrixunitaireHT__c</fullName>
    <label>PrixunitaireHT</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>