force-app/main/default/objects/Option__c/fields/Valorisation__c.field-meta.xml
<CustomField>
    <fullName>Valorisation__c</fullName>
    <description>Alimenté par configurateur</description>
    <label>Valorisation</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>