force-app/main/default/objects/Option__c/validationRules/VR001_K2_Option_RVQuantite.validationRule-meta.xml
<ValidationRule>
    <fullName>VR001_K2_Option_RVQuantite</fullName>
    <active>true</active>
    <description>Cette règle vérifie qu&apos;il y a bien une quantité positive sur &quot;Devis ligne Option&quot;</description>
    <errorConditionFormula>AND(Quantite__c &lt;0, $User.ByPassValidationRule__c =False)</errorConditionFormula>
    <errorMessage>Veuillez saisir une valeur positive pour la quantité</errorMessage>
</ValidationRule>