force-app/main/default/objects/Option__c/validationRules/VR002_K2_Option_RemiseParrainage.validationRule-meta.xml
<ValidationRule>
    <fullName>VR002_K2_Option_RemiseParrainage</fullName>
    <active>true</active>
    <description>CRM-473 : Le total de la remise parrainage ne peut pas dépasser 150 euros</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = False &amp;&amp; 
Codeoption__c == &apos;PARRAINAGE&apos; &amp;&amp; 
ABS(PrixHT__c) &gt; 150</errorConditionFormula>
    <errorMessage>Le total de la remise parrainage ne peut pas dépasser 150 euros</errorMessage>
</ValidationRule>