force-app/main/default/objects/Option__c/validationRules/VR003_K2_Option_LibelleNonModifiable.validationRule-meta.xml
<ValidationRule>
    <fullName>VR003_K2_Option_LibelleNonModifiable</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Libelleoption__c)</errorConditionFormula>
    <errorDisplayField>Libelleoption__c</errorDisplayField>
    <errorMessage>Libellé de l&apos;option non modifiable!</errorMessage>
</ValidationRule>